buildmaster: Add "persist" property to workers
This is a directory where buildbot can save data and
caches that will be persisted to the next build.

This fixes issues with caching on the macOS workers.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -104,17 +104,21 @@ c['workers'] = []
 
 # Create normal and latent workers
 for worker_name in worker_names:
+    worker_persist = worker_config.get(worker_name, "persist")
     if worker_config.get(worker_name, "type") ==  "latent_docker":
       image = worker_config.get(worker_name, "image")
       c['workers'].append(worker.DockerLatentWorker(worker_name,
                                                     worker_config.get(worker_name, "password"),
                                                     max_builds=1,
                                                     notify_on_missing=notify_on_missing,
+                                                    properties = {
+                                                        "persist": worker_persist,
+                                                    },
                                                     docker_host=docker_host,
                                                     followStartupLogs=True,
                                                     image=image,
                                                     masterFQDN="buildmaster",
-                                                    volumes=[f'buildbot-worker-{worker_name}:/home/buildbot'],
+                                                    volumes=[f'buildbot-worker-{worker_name}:{worker_persist}'],
                                                     hostconfig = { "network_mode": docker_network,
                                                                    "sysctls": { "net.ipv6.conf.all.disable_ipv6": 0 },
                                                                    "cap_add": ["NET_ADMIN"] }))
@@ -123,7 +127,13 @@ for worker_name in worker_names:
                             worker_config.get(worker_name, "password"),
                             max_builds=1,
                             notify_on_missing=notify_on_missing,
-                            properties = { 'signing_cert_password': get_worker_setting(worker_config, worker_name, 'signing_cert_password'), 'signing_cert_sha1': get_worker_setting(worker_config, worker_name, 'signing_cert_sha1'), 'timestamp_url': get_worker_setting(worker_config, worker_name, 'timestamp_url')}))
+                            properties = {
+                                "persist": worker_persist,
+                                'signing_cert_password': get_worker_setting(worker_config, worker_name, 'signing_cert_password'),
+                                'signing_cert_sha1': get_worker_setting(worker_config, worker_name, 'signing_cert_sha1'),
+                                'timestamp_url': get_worker_setting(worker_config, worker_name, 'timestamp_url')
+                            }
+        ))
 
 c['protocols'] = {'pb': {'port': r"tcp:interface=\:\:0:port=9989"}}
 
@@ -212,8 +222,8 @@ for steps_file in ["common_linux_steps.cfg"]:
     exec(compile(source=open(os.path.join('ovpn-dco', steps_file)).read(), filename=os.path.join('ovpn-dco', steps_file), mode='exec'))
 
 ccache = {
-    'PATH': ['/usr/lib64/ccache', '/usr/lib/ccache/bin', '/usr/lib/ccache', "${PATH}"],
-    'CCACHE_DIR': '/home/buildbot/ccache',
+    'PATH': ['/usr/local/opt/ccache/libexec', '/usr/lib64/ccache', '/usr/lib/ccache/bin', '/usr/lib/ccache', "${PATH}"],
+    'CCACHE_DIR': util.Interpolate('%(prop:persist)s/ccache'),
     'CCACHE_MAXSIZE': '1Gi',
 }
 
