--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-home=/home/buildbot
+persist=/home/buildbot
 extra_build_flags=""
 type=latent_docker
 ostype=unix
@@ -83,6 +83,13 @@ image=openvpn_community/buildbot-worker-ubuntu-2204:v1.0.0
 
 [ubuntu-2210]
 image=openvpn_community/buildbot-worker-ubuntu-2210:v1.0.0
+
+#[macos-amd64]
+#type=normal
+#persist=/Users/buildbot
+#enable_debian_builds=false
+#enable_openvpn3-linux_builds=false
+#enable_ovpn-dco_builds=false
 
 #[windows-server-2019-latent-ec2]
 #type=normal
