--- a/buildbot-host/buildmaster/openvpn/tclient_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/tclient_steps.cfg
@@ -19,7 +19,7 @@ def openvpnAddTClientStepsToBuildFactory(factory, combo, shell_env=None):
 
 
     # These steps restore a cached t_client_ips.rc, if any. On the first run it won't exist.
-    factory.addStep(steps.ShellCommand(command=["cp", "-vf",  "/home/buildbot/t_client_ips.rc", "."],
+    factory.addStep(steps.ShellCommand(command=["cp", "-vf", util.Interpolate('%(prop:persist)s/t_client_ips.rc'), "."],
                                         name="restore t_client_ips.rc",
                                         decodeRC={0:SUCCESS,1:SUCCESS},
                                         description="restoring",
@@ -51,7 +51,7 @@ def openvpnAddTClientStepsToBuildFactory(factory, combo, shell_env=None):
                                         descriptionDone="testing"))
 
     # Copy the current t_client_ips.rc out of the build directory to restore it later.
-    factory.addStep(steps.ShellCommand(command=["cp", "-vf", "t_client_ips.rc", "/home/buildbot/t_client_ips.rc"],
+    factory.addStep(steps.ShellCommand(command=["cp", "-vf", "t_client_ips.rc", util.Interpolate('%(prop:persist)s/t_client_ips.rc')],
                                         name="cache t_client_ips.rc",
                                         description="caching",
                                         descriptionDone="caching"))
