--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -503,6 +503,8 @@ ccache = {
     "CCACHE_MAXSIZE": "1Gi",
 }
 
+lwip_env = { "LWIPOVPN_PATH": "/buildbot/lwipovpnbuild/lwipovpn" }
+
 factories = {}
 
 # OpenVPN 2 Uncrustify code check
@@ -564,6 +566,7 @@ if openvpn_run_tclient_tests or openvpn_run_tserver_null_tests:
     for combo in build_and_test_config_opt_combos:
         make_check_env = {}
         make_check_env.update(ccache)
+        make_check_env.update(lwip_env)
         if openvpn_run_tclient_tests: make_check_env.update({ "TCLIENT_SKIP_RC": "1" })
 
         factory = util.BuildFactory()
