--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -310,6 +310,7 @@ for worker_name in worker_names:
                     "network_mode": docker_network,
                     "sysctls": {"net.ipv6.conf.all.disable_ipv6": 0},
                     "cap_add": ["NET_ADMIN"],
+                    "devices": ["/dev/net/tun:/dev/net/tun"],
                     "mem_limit": "4g",
                 },
             )
