buildmaster: Trigger openvpn2 builds for more file paths
Now that we have a MinGW build, it doesn't make sense
to exclude the Windows-only source code.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -896,8 +896,7 @@ def create_mails(name, mail_addresses, schedulers):
 openvpn_file_patterns = [
     "include/.*",
     "m4/.*",
-    "src/compat/.*",
-    "src/openvpn/.*",
+    "src/.*",
     "tests/.*",
     "compat.m4",
     "config.h\..*",
