Add clang builds
Signed-off-by: Samuli Seppänen <samuli.seppanen@gmail.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -659,6 +659,35 @@ factories.update(
 )
 del factory
 
+# OpenVPN 2 clang + asan test
+clang_env = { "CFLAGS": "-fsanitize=address,undefined -fno-sanitize-recover=all -fno-omit-frame-pointer -O2", "CC": "clang" }
+clang_env.update(ccache)
+clang_env.update(lwip_env)
+
+factory = util.BuildFactory()
+factory = openvpnAddCommonUnixStepsToBuildFactory(factory, "", clang_env)
+factory = openvpnAddUnixCompileStepsToBuildFactory(factory, "", clang_env)
+
+if openvpn_run_tserver_null_tests: factory = openvpnAddTServerNullPreStepsToBuildFactory(factory, "", clang_env)
+if openvpn_run_tclient_tests:      factory = openvpnAddTClientPreStepsToBuildFactory(factory, "", clang_env)
+
+factory = openvpnAddCheckStepsToBuildFactory(factory, "", clang_env)
+
+if openvpn_run_tclient_tests:      factory = openvpnAddTClientPostStepsToBuildFactory(factory, "", clang_env)
+
+factory_name = "clang"
+factories.update(
+    {
+        factory_name: {
+            "factory": factory,
+            "os": "unix",
+            "types": ["openvpn", "clang"],
+            "schedulers": ["openvpn_main", "openvpn_release"],
+        }
+    }
+)
+del factory
+
 # openvpn3 smoketest
 factory = util.BuildFactory()
 factory = openvpn3AddCommonLinuxStepsToBuildFactory(factory)
@@ -779,6 +808,7 @@ for factory_name, factory in factories.items():
             "mingw",
             "msbuild",
             "cmake",
+            "clang",
             "compile",
             "tclient",
             "ovpn-dco",
