--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -11,6 +11,7 @@ docker_url=tcp://172.18.0.1:2375
 enable_debian_builds=true
 enable_msbuild_builds=false
 enable_mingw_builds=false
+enable_clang_builds=false
 enable_cmake_builds=false
 enable_compile_builds=true
 enable_tclient_builds=true
@@ -152,6 +153,7 @@ enable_code-check_builds=true
 image=openvpn_community/buildbot-worker-ubuntu-2404:v1.2.0
 enable_mingw_builds=true
 enable_cmake_builds=true
+enable_clang_builds=true
 openvpn_extra_config_opts=--enable-werror
 
 [ubuntu-2404-arm64]
