buildmaster: allow custom repository parameter for force schedulers
This allows to run force schedulers for Gerrit patchsets
(or any git source)

Signed-off-by: Yuriy Darnobyt <yura.darnobyt@openvpn.net>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -1085,7 +1085,7 @@ c["schedulers"].append(
                 label="Commit",
                 branch=util.StringParameter(name="branch", default=openvpn_main_branch),
                 revision=util.StringParameter(name="revision", default=""),
-                repository=util.FixedParameter(name="repository", default=openvpn_repo_url),
+                repository=util.StringParameter(name="repository", default=openvpn_repo_url),
                 project=util.FixedParameter(name="project", default="openvpn"),
             ),
         ],
@@ -1101,7 +1101,7 @@ c["schedulers"].append(
                 label="Commit",
                 branch=util.StringParameter(name="branch", default=openvpn_release_branch),
                 revision=util.StringParameter(name="revision", default=""),
-                repository=util.FixedParameter(name="repository", default=openvpn_repo_url),
+                repository=util.StringParameter(name="repository", default=openvpn_repo_url),
                 project=util.FixedParameter(name="project", default="openvpn"),
             ),
         ],
@@ -1118,7 +1118,7 @@ c["schedulers"].append(
                 label="Commit",
                 branch=util.StringParameter(name="branch", default=openvpn3_branch),
                 revision=util.StringParameter(name="revision", default=""),
-                repository=util.FixedParameter(name="repository", default=openvpn3_repo_url),
+                repository=util.StringParameter(name="repository", default=openvpn3_repo_url),
                 project=util.FixedParameter(name="project", default="openvpn3"),
             ),
         ],
@@ -1134,7 +1134,7 @@ c["schedulers"].append(
                 label="Commit",
                 branch=util.StringParameter(name="branch", default=openvpn3_linux_branch),
                 revision=util.StringParameter(name="revision", default=""),
-                repository=util.FixedParameter(name="repository", default=openvpn3_linux_repo_url),
+                repository=util.StringParameter(name="repository", default=openvpn3_linux_repo_url),
                 project=util.FixedParameter(name="project", default="openvpn3-linux"),
             ),
         ],
@@ -1151,7 +1151,7 @@ c["schedulers"].append(
                 label="Commit",
                 branch=util.StringParameter(name="branch", default=ovpn_dco_branch),
                 revision=util.StringParameter(name="revision", default=""),
-                repository=util.FixedParameter(name="repository", default=ovpn_dco_repo_url),
+                repository=util.StringParameter(name="repository", default=ovpn_dco_repo_url),
                 project=util.FixedParameter(name="project", default="ovpn-dco"),
             ),
         ],
