MinGW: Build both Release and Debug build types
To detect potential problems that depend on optimization.

Fixes: #80

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn/common_mingw_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/common_mingw_steps.cfg
@@ -47,10 +47,21 @@ def openvpnAddCommonMingwStepsToBuildFactory(factory, shell_env=None):
 
     factory.addStep(
         steps.ShellCommand(
-            command=["cmake", "--build", "--preset", "mingw-x64", "--parallel=1"],
+            command=["cmake", "--build", "--preset", "mingw-x64", "--parallel=1", "--config=Release"],
             name="build",
-            description="building",
-            descriptionDone="build",
+            description="building Release",
+            descriptionDone="build Release",
+            env=shell_env,
+            haltOnFailure=True,
+        )
+    )
+
+    factory.addStep(
+        steps.ShellCommand(
+            command=["cmake", "--build", "--preset", "mingw-x64", "--parallel=1", "--config=Debug"],
+            name="build",
+            description="building Debug",
+            descriptionDone="build Debug",
             env=shell_env,
             haltOnFailure=True,
         )
