buildbot: Add Android build on Ubuntu 24.04
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildbot-worker-ubuntu-2404/Dockerfile.suffix
+++ b/buildbot-host/buildbot-worker-ubuntu-2404/Dockerfile.suffix
@@ -1,2 +1,4 @@
 ENV VCPKG_ROOT=/opt/vcpkg
 ENV VCPKG_DEFAULT_BINARY_CACHE=/home/buildbot/vcpkg/cache
+ENV ANDROID_NDK_HOME=/opt/android/ndk-bundle
+ENV ANDROID_NDK_ROOT=/opt/android/ndk-bundle
