--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -442,6 +442,7 @@ def can_sign(buildstep):
 for steps_file in [
     "common_unix_steps.cfg",
     "cmake_unix_steps.cfg",
+    "android_unix_steps.cfg",
     "common_windows_steps.cfg",
     "common_mingw_steps.cfg",
     "debian_packaging_steps.cfg",
@@ -643,6 +644,22 @@ factories.update(
 )
 del factory
 
+# OpenVPN 2 Android build
+factory = util.BuildFactory()
+factory = openvpnAddAndroidUnixStepsToBuildFactory(factory, ccache)
+factory_name = "android"
+factories.update(
+    {
+        factory_name: {
+            "factory": factory,
+            "os": "unix",
+            "types": ["openvpn", "android"],
+            "schedulers": ["openvpn_main"],
+        }
+    }
+)
+del factory
+
 # OpenVPN 2 Windows mingw build
 factory = util.BuildFactory()
 factory = openvpnAddCommonMingwStepsToBuildFactory(factory, ccache)
@@ -807,6 +824,7 @@ for factory_name, factory in factories.items():
             "debian",
             "mingw",
             "msbuild",
+            "android",
             "cmake",
             "clang",
             "compile",
