--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -13,6 +13,7 @@ enable_msbuild_builds=false
 enable_mingw_builds=false
 enable_clang_builds=false
 enable_cmake_builds=false
+enable_android_builds=false
 enable_compile_builds=true
 enable_tclient_builds=true
 enable_openssl_builds=true
@@ -153,6 +154,7 @@ enable_code-check_builds=true
 image=openvpn_community/buildbot-worker-ubuntu-2404:v1.2.0
 enable_mingw_builds=true
 enable_cmake_builds=true
+enable_android_builds=true
 enable_clang_builds=true
 openvpn_extra_config_opts=--enable-werror
 
