Add persistent /build directory for docker workers
This should deliver some speedup to builds, especially
fast ones (i.e. not t_client ones) for which a
considerably amount of time is spent in steps like
git clone.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -305,7 +305,10 @@ for worker_name in worker_names:
                 followStartupLogs=True,
                 image=image,
                 masterFQDN=master_fqdn,
-                volumes=[f"buildbot-worker-{worker_name}:{worker_persist}"],
+                volumes=[
+                    f"buildbot-worker-{worker_name}:{worker_persist}",
+                    f"buildbot-worker-{worker_name}-build:/build",
+                ],
                 hostconfig={
                     "network_mode": docker_network,
                     "sysctls": {"net.ipv6.conf.all.disable_ipv6": 0},
