Apply pre-commit to all files
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn/common_mingw_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/common_mingw_steps.cfg
@@ -47,7 +47,14 @@ def openvpnAddCommonMingwStepsToBuildFactory(factory, shell_env=None):
 
     factory.addStep(
         steps.ShellCommand(
-            command=["cmake", "--build", "--preset", "mingw-x64", "--parallel=1", "--config=Release"],
+            command=[
+                "cmake",
+                "--build",
+                "--preset",
+                "mingw-x64",
+                "--parallel=1",
+                "--config=Release",
+            ],
             name="build",
             description="building Release",
             descriptionDone="build Release",
@@ -58,7 +65,14 @@ def openvpnAddCommonMingwStepsToBuildFactory(factory, shell_env=None):
 
     factory.addStep(
         steps.ShellCommand(
-            command=["cmake", "--build", "--preset", "mingw-x64", "--parallel=1", "--config=Debug"],
+            command=[
+                "cmake",
+                "--build",
+                "--preset",
+                "mingw-x64",
+                "--parallel=1",
+                "--config=Debug",
+            ],
             name="build",
             description="building Debug",
             descriptionDone="build Debug",
