--- a/buildbot-host/buildmaster/master-default.ini
+++ b/buildbot-host/buildmaster/master-default.ini
@@ -3,9 +3,9 @@ owner=root@localhost
 
 [master]
 master_fqdn=buildmaster
-
 buildbot_url=http://192.168.59.114:8010/
 title_url=https://buildmaster.vagrant.local
+cancel_old_builds=false
 
 [email]
 notify_on_missing=["root@localhost"]
