openvpn: In CMake builds, delete the build directory
To make sure that CMake re-evaluates all tests.
The caching is sometimes too eager.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn/android_unix_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/android_unix_steps.cfg
@@ -40,6 +40,14 @@ def openvpnAddAndroidUnixStepsToBuildFactory(factory, shell_env=None):
     )
     factory.addStep(
         steps.ShellCommand(
+            command=["rm", "-rf", "android-build"],
+            name="clean build dir",
+            description="cleaning",
+            descriptionDone="clean",
+        )
+    )
+    factory.addStep(
+        steps.ShellCommand(
             command=[
                 "cmake",
                 "-B",
