--- a/buildbot-host/buildmaster/openvpn/cmake_unix_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/cmake_unix_steps.cfg
@@ -27,6 +27,15 @@ def openvpnAddCmakeUnixStepsToBuildFactory(factory, shell_env=None):
 
     factory.addStep(
         steps.ShellCommand(
+            command=["rm", "-rf", "out"],
+            name="clean build dir",
+            description="cleaning",
+            descriptionDone="clean",
+        )
+    )
+
+    factory.addStep(
+        steps.ShellCommand(
             command=["cmake", "--preset", "unix-native", "-DUNSUPPORTED_BUILDS=ON"],
             name="configure",
             description="configuring",
