--- a/buildbot-host/buildmaster/openvpn/common_mingw_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/common_mingw_steps.cfg
@@ -36,6 +36,15 @@ def openvpnAddCommonMingwStepsToBuildFactory(factory, shell_env=None):
 
     factory.addStep(
         steps.ShellCommand(
+            command=["rm", "-rf", "out"],
+            name="clean build dir",
+            description="cleaning",
+            descriptionDone="clean",
+        )
+    )
+
+    factory.addStep(
+        steps.ShellCommand(
             command=["cmake", "--preset", "mingw-x64"],
             name="configure",
             description="configuring",
