Android: Set CMAKE_SYSTEM_VERSION
This needs to be kept in sync with what vcpkg defines
in its triplet.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn/android_unix_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/android_unix_steps.cfg
@@ -54,6 +54,7 @@ def openvpnAddAndroidUnixStepsToBuildFactory(factory, shell_env=None):
                 "android-build",
                 "-DUNSUPPORTED_BUILDS=ON",
                 "-DCMAKE_SYSTEM_NAME=Android",
+                "-DCMAKE_SYSTEM_VERSION=28",
                 util.Interpolate(
                     f"-DOPENSSL_ROOT_DIR=%(prop:VCPKG_ROOT)s/installed/{triplet}"
                 ),
