buildmaster: Update file filter for openvpn
- Since we have CMake builds now make sure to rebuild
  if only CMakeLists.txt has changed.
- Make sure to match all Makefile.am/CMakeLists.txt files.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -974,7 +974,8 @@ openvpn_file_patterns = [
     "compat.m4",
     "config.h\..*",
     "configure.ac",
-    "Makefile.am",
+    ".*Makefile.am",
+    ".*CMakeLists.txt",
     "version.m4",
     ".*\.rst",
     "doc/Makefile.am",
