buildbot-host: Add new workers for Ubuntu 25.04 and Fedora 42
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -96,6 +96,10 @@ enable_openvpn3-linux_builds=false
 image=openvpn_community/buildbot-worker-fedora-41:v1.0.0
 enable_debian_builds=false
 
+[fedora-42]
+image=openvpn_community/buildbot-worker-fedora-42:v1.0.0
+enable_debian_builds=false
+
 [fedora-41-arm64]
 master_fqdn=10.29.32.1
 docker_url=tcp://10.29.32.2:2375
@@ -142,6 +146,12 @@ openvpn_extra_config_opts=--enable-werror
 master_fqdn=10.29.32.1
 docker_url=tcp://10.29.32.2:2375
 image=openvpn_community/buildbot-worker-ubuntu-2404:v1.2.0
+
+[ubuntu-2504]
+image=openvpn_community/buildbot-worker-ubuntu-2504:v1.0.0
+enable_cmake_builds=true
+enable_clang_builds=true
+openvpn_extra_config_opts=--enable-werror
 
 #[macos-amd64]
 #type=normal
