buildmaster: Add support for new openvpn Windows builds
This completely replaces the old Windows build
support that was very outdated since it hadn't
been used for a few years.

For now this just does a CMake build for openvpn
itself. It does not yet re-add a MSI build.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/Dockerfile
+++ b/buildbot-host/buildmaster/Dockerfile
@@ -1,5 +1,5 @@
 ARG MY_NAME="buildmaster"
-ARG MY_VERSION="v2.7.3"
+ARG MY_VERSION="v2.8.0"
 ARG IMAGE=buildbot/buildbot-master:v3.11.9
 
 FROM $IMAGE
@@ -14,6 +14,8 @@ RUN mkdir -p $BASEDIR
 
 # Required for latent docker buildslaves
 RUN . /buildbot_venv/bin/activate && pip install treq docker==5.0.3 || false
+# Required for latent EC2 buildslaves
+RUN . /buildbot_venv/bin/activate && pip install boto3 || false
 RUN set -ex; \
     apt-get update || false
 
@@ -22,16 +24,9 @@ COPY buildmaster/start_buildmaster.sh $BASEDIR
 COPY buildmaster/*.cfg $BASEDIR/
 COPY buildmaster/master*.ini $BASEDIR/
 COPY buildmaster/worker*.ini $BASEDIR/
-COPY buildmaster/build-openvpn-gui.ps1 $BASEDIR
-COPY buildmaster/msbuild-x64.bat $BASEDIR
-COPY buildmaster/msbuild-x64_x86.bat $BASEDIR
-COPY buildmaster/msbuild-x64_arm64.bat $BASEDIR
-COPY buildmaster/sign-binaries.bat $BASEDIR
 COPY buildmaster/debian-*.sh $BASEDIR/
 COPY buildmaster/debian-*.py $BASEDIR/
 COPY buildmaster/debian-changelog.tmpl $BASEDIR/
-COPY buildmaster/import-signing-cert.ps1 $BASEDIR/
-COPY buildmaster/authenticode.pfx $BASEDIR/
 ADD buildmaster/openvpn $BASEDIR/openvpn
 ADD buildmaster/openvpn3 $BASEDIR/openvpn3
 ADD buildmaster/openvpn3-linux $BASEDIR/openvpn3-linux
