--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -28,6 +28,7 @@ from buildbot.util.ssfilter import SourceStampFilter
 
 log = Logger()
 
+
 class GerritChecks(ReporterBase):
     name = "GerritChecks"
 
@@ -201,6 +202,13 @@ buildbot_url = master_config.get("master", "buildbot_url")
 title_url = master_config.get("master", "title_url")
 docker_network = master_config.get("docker", "network")
 cancel_old_builds = master_config.getboolean("master", "cancel_old_builds")
+have_ec2_workers = master_config.getboolean("master", "have_ec2_workers")
+if have_ec2_workers:
+    ec2_key = master_config.get("ec2", "key")
+    ec2_region = master_config.get("ec2", "region")
+    ec2_subnet = master_config.get("ec2", "subnet")
+    ec2_sgs = json.loads(master_config.get("ec2", "security_groups"))
+vcpkg_cache = master_config.get("vcpkg", "cache")
 
 # Global email settings
 notify_on_missing = json.loads(master_config.get("email", "notify_on_missing"))
@@ -222,6 +230,7 @@ openvpn_release_branch = master_config.get("openvpn", "release_branch")
 openvpn_run_tserver_null_tests = master_config.getboolean(
     "openvpn", "run_tserver_null_tests"
 )
+openvpn_run_windows_builds = master_config.getboolean("openvpn", "run_windows_builds")
 openvpn_run_tclient_tests = master_config.getboolean("openvpn", "run_tclient_tests")
 openvpn_run_code_check = master_config.getboolean("openvpn", "run_code_check")
 otst = master_config.get("openvpn", "tree_stable_timer")
@@ -348,6 +357,35 @@ for worker_name in worker_names:
                     },
                 )
             )
+    elif worker_config.get(worker_name, "type") == "latent_ec2":
+        image = worker_config.get(worker_name, "image")
+        instance = worker_config.get(worker_name, "instance")
+        profile = get_worker_setting(worker_config, worker_name, "iam_profile")
+
+        c["workers"].append(
+            worker.EC2LatentWorker(
+                worker_name,
+                worker_config.get(worker_name, "password"),
+                instance,
+                ami=image,
+                region=ec2_region,
+                subnet_id=ec2_subnet,
+                security_group_ids=ec2_sgs,
+                keypair_name=ec2_key,
+                instance_profile_name=profile,
+                max_builds=1,
+                notify_on_missing=notify_on_missing,
+                # properties={
+                #     "persist": worker_persist,
+                # },
+                tags={
+                    "Name": worker_name,
+                    "owner": openvpn_owner,
+                    "created-by": "buildbot",
+                    "documentation": "https://github.com/OpenVPN/openvpn-buildbot",
+                },
+            )
+        )
     else:
         c["workers"].append(
             worker.Worker(
@@ -357,15 +395,6 @@ for worker_name in worker_names:
                 notify_on_missing=notify_on_missing,
                 properties={
                     "persist": worker_persist,
-                    "signing_cert_password": get_worker_setting(
-                        worker_config, worker_name, "signing_cert_password"
-                    ),
-                    "signing_cert_sha1": get_worker_setting(
-                        worker_config, worker_name, "signing_cert_sha1"
-                    ),
-                    "timestamp_url": get_worker_setting(
-                        worker_config, worker_name, "timestamp_url"
-                    ),
                 },
             )
         )
@@ -453,22 +482,6 @@ def getFactoryName(combo):
     return f"factory{getBuilderNameSuffix(combo)}"
 
 
-def can_sign(buildstep):
-    """Check if this worker can sign binaries"""
-    worker_name = buildstep.worker.workername
-    worker_config = configparser.ConfigParser()
-    worker_config.read("worker.ini")
-    sign_capable = True
-
-    try:
-        worker_config.get(worker_name, "timestamp_url")
-        worker_config.get(worker_name, "signing_cert_sha1")
-    except configparser.NoOptionError:
-        sign_capable = False
-
-    return sign_capable
-
-
 # Load build steps from separate files
 #
 # OpenVPN 2 build steps
@@ -538,6 +551,8 @@ ccache = {
 }
 
 lwip_env = {"LWIPOVPN_PATH": "/buildbot/lwipovpnbuild/lwipovpn"}
+
+vcpkg_env = {"VCPKG_BINARY_SOURCES": vcpkg_cache}
 
 factories = {}
 
@@ -660,20 +675,25 @@ for combo in packaging_config_opt_combos:
     del factory
 
 # OpenVPN 2 Windows msbuild tests
-factory = util.BuildFactory()
-factory = openvpnAddCommonWindowsStepsToBuildFactory(factory)
-factory_name = "msbuild"
-factories.update(
-    {
-        factory_name: {
-            "factory": factory,
-            "os": "windows",
-            "types": ["openvpn", "msbuild"],
-            "schedulers": ["openvpn_main", "openvpn_release"],
-        }
-    }
-)
-del factory
+if openvpn_run_windows_builds:
+    for win_arch in ["amd64", "x86", "arm64", "amd64-clang", "x86-clang"]:
+        factory = util.BuildFactory()
+        run_tests = "arm64" not in win_arch
+        factory = openvpnAddCommonWindowsStepsToBuildFactory(
+            factory, f"win-{win_arch}-release", run_tests, vcpkg_env
+        )
+        factory_name = f"msbuild-{win_arch}"
+        factories.update(
+            {
+                factory_name: {
+                    "factory": factory,
+                    "os": "windows",
+                    "types": ["openvpn", "msbuild"],
+                    "schedulers": ["openvpn_main", "openvpn_release"],
+                }
+            }
+        )
+        del factory
 
 # OpenVPN 2 cmake build
 factory = util.BuildFactory()
@@ -1275,7 +1295,9 @@ c["services"].append(
 if cancel_old_builds:
     obc = util.OldBuildCanceller(
         "build_canceller",
-        filters=[(builder_names["openvpn_main"], SourceStampFilter(branch_not_eq="master"))]
+        filters=[
+            (builder_names["openvpn_main"], SourceStampFilter(branch_not_eq="master"))
+        ],
     )
 
     c["services"].append(obc)
