--- a/buildbot-host/buildmaster/master-default.ini
+++ b/buildbot-host/buildmaster/master-default.ini
@@ -6,6 +6,8 @@ master_fqdn=buildmaster
 buildbot_url=http://192.168.59.114:8010/
 title_url=https://buildmaster.vagrant.local
 cancel_old_builds=false
+# see also [ec2] below
+have_ec2_workers=false
 
 [email]
 notify_on_missing=["root@localhost"]
@@ -27,8 +29,9 @@ owner=openvpn@localhost
 repo_url=https://github.com/OpenVPN/openvpn.git
 main_branch=master
 release_branch=release/2.6
-run_tclient_tests=False
-run_code_check=False
+run_tclient_tests=false
+run_code_check=false
+run_windows_builds=false
 # Seconds to wait for new commits before launching the builds. Use None to
 # or 0 to build immediately on commit.
 tree_stable_timer=0
@@ -74,3 +77,13 @@ tree_stable_timer=None
 [docker]
 network=buildbot-net
 max_builds={ "172.18.0.1": 4, "10.29.32.2": 4 }
+
+#[ec2]
+#key=keypair_name
+#region=eu-central-1
+#subnet=subnet-123456
+#security_groups=["sg-123456"]
+
+# Central vcpkg binary caches
+[vcpkg]
+cache=
