buildmaster: Add support for doxygen build
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -492,6 +492,7 @@ for steps_file in [
     "common_windows_steps.cfg",
     "common_mingw_steps.cfg",
     "debian_packaging_steps.cfg",
+    "doxygen_build_steps.cfg",
     "tserver_null_pre_steps.cfg",
     "tclient_pre_steps.cfg",
     "check_steps.cfg",
@@ -572,6 +573,23 @@ if openvpn_run_code_check:
         }
     )
     del factory
+
+# OpenVPN 2 doxygen build using default configure options
+factory = util.BuildFactory()
+factory = openvpnAddCommonUnixStepsToBuildFactory(factory, "", ccache)
+factory = openvpnAddDoxygenStepsToBuildFactory(factory, ccache)
+factory_name = "doxygen"
+factories.update(
+    {
+        factory_name: {
+            "factory": factory,
+            "os": "unix",
+            "types": ["doxygen", "openvpn"],
+            "schedulers": ["openvpn_main"],
+        }
+    }
+)
+del factory
 
 # OpenVPN 2 smoketest using default configure options
 factory = util.BuildFactory()
@@ -907,6 +925,7 @@ for factory_name, factory in factories.items():
             "ovpn-dco",
             "ovpn-dco-smoketest",
             "code-check",
+            "doxygen",
         ]
 
         skip_build = False
