buildmaster: Delete meson _builddir between builds for openvpn3-linux
We could also try "setup --reconfigure", but let's go for the
clean solution.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn3-linux/common_linux_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn3-linux/common_linux_steps.cfg
@@ -34,6 +34,16 @@ def openvpn3LinuxAddCommonLinuxStepsToBuildFactory(factory, shell_env):
 
     factory.addStep(
         steps.ShellCommand(
+            command=["rm", "-fr", "_builddir"],
+            name="clean builddir",
+            description="cleaning",
+            descriptionDone="clean",
+            env=shell_env,
+        )
+    )
+
+    factory.addStep(
+        steps.ShellCommand(
             command=["meson", "setup", "--prefix=/usr", "_builddir"],
             name="configure",
             description="configuring",
@@ -45,7 +55,7 @@ def openvpn3LinuxAddCommonLinuxStepsToBuildFactory(factory, shell_env):
     factory.addStep(
         steps.ShellCommand(
             command=["meson", "compile", "-C", "_builddir", "--jobs=1"],
-            name="building",
+            name="build",
             description="building",
             descriptionDone="build",
             env=shell_env,
