buildmaster: Allow to set additional types for tclient factories
This allows us to only filter out specific builders,
like Debian 11 with mbedTLS right now.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -621,35 +621,35 @@ if openvpn_run_tclient_tests or openvpn_run_tserver_null_tests:
 
         factory = util.BuildFactory()
         factory = openvpnAddCommonUnixStepsToBuildFactory(
-            factory, combo, make_check_env
+            factory, combo["configure"], make_check_env
         )
         factory = openvpnAddUnixCompileStepsToBuildFactory(
-            factory, combo, make_check_env
+            factory, combo["configure"], make_check_env
         )
 
         if openvpn_run_tserver_null_tests:
             factory = openvpnAddTServerNullPreStepsToBuildFactory(
-                factory, combo, make_check_env
+                factory, combo["configure"], make_check_env
             )
         if openvpn_run_tclient_tests:
             factory = openvpnAddTClientPreStepsToBuildFactory(
-                factory, combo, make_check_env
+                factory, combo["configure"], make_check_env
             )
 
         factory = openvpnAddCheckStepsToBuildFactory(factory, combo, make_check_env)
 
         if openvpn_run_tclient_tests:
             factory = openvpnAddTClientPostStepsToBuildFactory(
-                factory, combo, make_check_env
+                factory, combo["configure"], make_check_env
             )
 
-        factory_name = getFactoryName(combo)
+        factory_name = getFactoryName(combo["configure"])
         factories.update(
             {
                 factory_name: {
                     "factory": factory,
                     "os": "unix",
-                    "types": ["openvpn", "tclient"],
+                    "types": ["openvpn", "tclient"] + combo["types"],
                     "schedulers": ["openvpn_main", "openvpn_release"],
                 }
             }
