--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -37,6 +37,8 @@ openvpn3_linux_command_prefix=["/bin/sh", "-c"]
 
 [debian-11]
 image=openvpn_community/buildbot-worker-debian-11:v1.0.3
+# mbedTLS too old for EKM
+enable_mbedtls_builds=false
 # meson too old
 enable_openvpn3-linux_builds=false
 
