--- a/buildbot-host/buildmaster/master-default.ini
+++ b/buildbot-host/buildmaster/master-default.ini
@@ -37,8 +37,8 @@ run_windows_builds=false
 tree_stable_timer=0
 
 build_and_test_config_opt_combos=[
-    "",
-    "--with-crypto-library=mbedtls"
+    { "types": ["openssl"], "configure": "" },
+    { "types": ["mbedtls"], "configure": "--with-crypto-library=mbedtls" }
     ]
 
 compile_config_opt_combos=[
