buildmaster: Set "Login" tag for EC2 latent workers
We use this in our infrastructure.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -383,6 +383,7 @@ for worker_name in worker_names:
                     "owner": openvpn_owner,
                     "created-by": "buildbot",
                     "documentation": "https://github.com/OpenVPN/openvpn-buildbot",
+                    "Login": "buildbot",
                 },
             )
         )
