openvpn3-linux: Fix gdbuspp build
Missing workdir for one step.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn3-linux/gdbuspp_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn3-linux/gdbuspp_steps.cfg
@@ -31,6 +31,7 @@ def openvpn3LinuxAddGdbusppStepsToBuildFactory(factory, shell_env):
             description="cleaning",
             descriptionDone="clean",
             descriptionSuffix="gdbuspp",
+            workdir="gdbuspp",
             env=shell_env,
         )
     )
