buildmaster: Update build variants for openvpn
- Remove --disable-server, this option hasn't existed
  for years
- Add --disable-debug, which actually broke recently.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master-default.ini
+++ b/buildbot-host/buildmaster/master-default.ini
@@ -47,7 +47,7 @@ compile_config_opt_combos=[
     "--disable-lzo --disable-lz4 --enable-comp-stub",
     "--disable-lzo --disable-management",
     "--disable-management",
-    "--disable-server --enable-small",
+    "--disable-debug",
     "--enable-small"
     ]
 
