buildmaster: Allow separate t_client worker for static workers
This allows workers that have enough resources to
better parallelize jobs.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -399,6 +399,19 @@ for worker_name in worker_names:
                 },
             )
         )
+        if worker_config.get(worker_name, "enable_separate_tclient_worker") == "true":
+            c["workers"].append(
+                worker.Worker(
+                    f"{worker_name}-tc",
+                    worker_config.get(worker_name, "password"),
+                    max_builds=1,
+                    notify_on_missing=notify_on_missing,
+                    properties={
+                        "persist": worker_persist,
+                    },
+                )
+            )
+
 
 c["protocols"] = {"pb": {"port": r"tcp:interface=\:\:0:port=9989"}}
 
@@ -973,6 +986,11 @@ for factory_name, factory in factories.items():
         actual_worker_name = worker_name
         if "tclient" in factory["types"]:
             if worker_config.get(worker_name, "type") == "latent_docker":
+                actual_worker_name = f"{worker_name}-tc"
+            elif (
+                worker_config.get(worker_name, "enable_separate_tclient_worker")
+                == "true"
+            ):
                 actual_worker_name = f"{worker_name}-tc"
 
         c["builders"].append(
