--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -16,6 +16,8 @@ enable_cmake_builds=false
 enable_android_builds=false
 enable_compile_builds=true
 enable_tclient_builds=true
+# Note: only affects static workers, ignored for latent ones
+enable_separate_tclient_worker=false
 enable_openssl_builds=true
 enable_mbedtls_builds=true
 enable_openvpn_builds=true
