buildmaster: Trigger builds on changes to dns scripts
Since we test them in some t_client configurations,
we do want the builds.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -1064,6 +1064,7 @@ openvpn_file_patterns = [
     "m4/.*",
     "src/.*",
     "tests/.*",
+    "distro/dns-scripts/.*",
     "compat.m4",
     "config.h\..*",
     "configure.ac",
