openvpn: switch from uncrustify to clang-format
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -513,7 +513,7 @@ for steps_file in [
     "tclient_post_steps.cfg",
     "unix_compile_steps.cfg",
     "unix_unit-test_steps.cfg",
-    "uncrustify_code_check.cfg",
+    "code_check.cfg",
 ]:
     exec(
         compile(
@@ -571,10 +571,10 @@ vcpkg_env = {"VCPKG_BINARY_SOURCES": vcpkg_cache}
 
 factories = {}
 
-# OpenVPN 2 Uncrustify code check
+# OpenVPN 2 code check
 if openvpn_run_code_check:
     factory = util.BuildFactory()
-    factory = openvpnAddUncrustifyStepsToBuildFactory(factory, ccache)
+    factory = openvpnAddClangFormatStepsToBuildFactory(factory, ccache)
     factory_name = "openvpn-code-check"
     factories.update(
         {
