--- a/buildbot-host/buildmaster/openvpn/code_check.cfg
+++ b/buildbot-host/buildmaster/openvpn/code_check.cfg
@@ -1,6 +1,6 @@
 # -*- python -*-
 # ex: set filetype=python:
-def openvpnAddUncrustifyStepsToBuildFactory(factory, shell_env=None):
+def openvpnAddClangFormatStepsToBuildFactory(factory, shell_env=None):
     if shell_env is None:
         shell_env = {}
 
@@ -10,16 +10,16 @@ def openvpnAddUncrustifyStepsToBuildFactory(factory, shell_env=None):
             mode="full",
             name="clone",
             description="cloning",
-            descriptionDone="cloning",
+            descriptionDone="clone",
         )
     )
 
     factory.addStep(
         steps.ShellCommand(
-            command="./dev-tools/reformat-all.sh",
-            name="Run uncrustify",
-            description="Run uncrustify",
-            descriptionDone="Run uncrustify",
+            command="pre-commit run -a || true",
+            name="Run clang-format",
+            description="formatting",
+            descriptionDone="format",
             env=shell_env,
         )
     )
@@ -28,8 +28,8 @@ def openvpnAddUncrustifyStepsToBuildFactory(factory, shell_env=None):
         steps.ShellCommand(
             command="git diff --exit-code",
             name="Check for changes",
-            description="Check for changes",
-            descriptionDone="Check for changes",
+            description="checking",
+            descriptionDone="check",
             env=shell_env,
         )
     )
