--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -1068,6 +1068,8 @@ openvpn_file_patterns = [
     "src/.*",
     "tests/.*",
     "distro/dns-scripts/.*",
+    "sample/sample-keys/.*",
+    "sample/sample-config-files/loopback-.*",
     "compat.m4",
     "config.h\..*",
     "configure.ac",
