buildbot-host: Add buildbot-worker-debian-13
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -63,6 +63,9 @@ image=openvpn_community/buildbot-worker-debian-12-openvpn-legacy:v1.0.0
 # only for t_client
 enable_compile_builds=false
 
+[debian-13]
+image=openvpn_community/buildbot-worker-debian-13:v1.0.0
+
 [debian-unstable]
 image=openvpn_community/buildbot-worker-debian-unstable:v1.1.0
 
