--- a/buildbot-host/buildmaster/openvpn/common_windows_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/common_windows_steps.cfg
@@ -29,19 +29,18 @@ def openvpnAddCommonWindowsStepsToBuildFactory(
     )
 
     factory.addStep(
-        steps.ShellCommand(
-            command=["cmake", "--preset", preset],
-            name="configure",
-            description="configuring",
-            descriptionDone="configure",
-            env=windows_env,
-            haltOnFailure=True,
+        steps.FileDownload(
+            mastersrc="/var/lib/buildbot/masters/default/build-windows.bat",
+            workerdest="build-windows.bat",
+            name="download build script",
+            description="downloading",
+            descriptionDone="downloading",
         )
     )
 
     factory.addStep(
         steps.ShellCommand(
-            command=["cmake", "--build", "--preset", preset, "--parallel=4"],
+            command=["call", "build-windows.bat", preset],
             name="build",
             description="building",
             descriptionDone="build",
