code-check: Fall back to uncrustify for older branches
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn/code_check.cfg
+++ b/buildbot-host/buildmaster/openvpn/code_check.cfg
@@ -1,6 +1,6 @@
 # -*- python -*-
 # ex: set filetype=python:
-def openvpnAddClangFormatStepsToBuildFactory(factory, shell_env=None):
+def openvpnAddFormatStepsToBuildFactory(factory, shell_env=None):
     if shell_env is None:
         shell_env = {}
 
@@ -16,8 +16,8 @@ def openvpnAddClangFormatStepsToBuildFactory(factory, shell_env=None):
 
     factory.addStep(
         steps.ShellCommand(
-            command="pre-commit run -a || true",
-            name="Run clang-format",
+            command="if [ -f .clang-format ]; then pre-commit run -a || true; else ./dev-tools/reformat-all.sh; fi",
+            name="Run format check",
             description="formatting",
             descriptionDone="format",
             env=shell_env,
