openvpn/check_steps.cfg: Set sigTermTime for "make check"
If for some reason we kill this step (e.g. because of
newer builds), we want to give the tests some opportunity
to clean up, like killing the openvpn processes. They
are not affected by the normal kill, since they run under
sudo.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/openvpn/check_steps.cfg
+++ b/buildbot-host/buildmaster/openvpn/check_steps.cfg
@@ -12,6 +12,7 @@ def openvpnAddCheckStepsToBuildFactory(factory, combo, shell_env=None):
             name="run tests",
             description="testing",
             descriptionDone="testing",
+            sigtermTime=5,
         )
     )
 
