Enable pkcs11 tests on Ubuntu build hosts
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -147,7 +147,7 @@ enable_mingw_builds=true
 enable_cmake_builds=true
 enable_android_builds=true
 enable_clang_builds=true
-openvpn_extra_config_opts=--enable-werror
+openvpn_extra_config_opts=--enable-werror --enable-pkcs11 --enable-systemd
 
 [ubuntu-2404-arm64]
 master_fqdn=10.29.32.1
