buildmaster: Allow to override database setting from master.ini
So we can use alternative backends.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master-default.ini
+++ b/buildbot-host/buildmaster/master-default.ini
@@ -3,6 +3,7 @@ owner=root@localhost
 
 [master]
 master_fqdn=buildmaster
+database=default
 buildbot_url=http://192.168.59.114:8010/
 title_url=https://buildmaster.vagrant.local
 cancel_old_builds=false
