--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -198,6 +198,9 @@ c = BuildmasterConfig = {}
 # Global settings
 persistent_dir = os.path.expanduser(os.path.join(basedir, "persistent"))
 master_fqdn = master_config.get("master", "master_fqdn")
+database = master_config.get("master", "database")
+if database == "default":
+    database = f"sqlite:////{persistent_dir}/libstate.sqlite"
 buildbot_url = master_config.get("master", "buildbot_url")
 title_url = master_config.get("master", "title_url")
 docker_network = master_config.get("docker", "network")
@@ -1357,5 +1360,5 @@ c["www"] = {
 }
 
 c["db"] = {
-    "db_url": f"sqlite:////{persistent_dir}/libstate.sqlite",
+    "db_url": database,
 }
