buildmaster: Add database janitor
So that we do not grow the database indefinitely.

Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/master.cfg
+++ b/buildbot-host/buildmaster/master.cfg
@@ -2,6 +2,7 @@
 # ex: set filetype=python:
 
 import configparser
+from datetime import timedelta
 import json
 import treq
 import os
@@ -1362,3 +1363,10 @@ c["www"] = {
 c["db"] = {
     "db_url": database,
 }
+
+c["configurators"] = [
+    util.JanitorConfigurator(
+        logHorizon=timedelta(weeks=12),
+        hour=3,
+    )
+]
