Add openSUSE Leap 16 worker
Signed-off-by: Frank Lichtenheld <frank@lichtenheld.com>

--- a/buildbot-host/buildmaster/worker-default.ini
+++ b/buildbot-host/buildmaster/worker-default.ini
@@ -131,6 +131,10 @@ enable_ovpn-dco_builds=false
 enable_openvpn3-linux_builds=false
 openvpn_extra_config_opts=--disable-dco
 
+[opensuse-leap-16]
+image=openvpn_community/buildbot-worker-opensuse-leap-16:v1.0.0
+enable_debian_builds=false
+
 [ubuntu-2204]
 image=openvpn_community/buildbot-worker-ubuntu-2204:v1.1.0
 enable_code-check_builds=true
